# SegmentLargestDisks

./: .gitattributes  .gitignore  CLAUDE.md  README.md  dataset.py  evaluate.py  generate_data.py  logger.py  plot_samples.py  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: python-tests.yml
conf/: README.md  unet.toml  vit.toml
configs/: unet.yml
deep_circle_counter/: classification_metric.py  dataset.py  loops.py  main.py  segmentation_model.py  segmentation_module.py  trainer.py
deep_circle_counter/data/: __init__.py  dataset.py  dm.py
deep_circle_counter/dataset/: __init__.py  circle_dataset.py  generate_circles.py  plot_circles.py
deep_circle_counter/losses/: __init__.py  dice.py  loss.py
deep_circle_counter/metrics/: __init__.py  accuracy.py  metric.py
deep_circle_counter/models/: __init__.py  fpn.py  segformer.py  unet.py
models/: __init__.py  unet.py  vit.py
openspec/specs/research-notes/: spec.md
research/: README.md  architecture-notes.md
scripts/: plot_circles.py
src/: confusion_matrix.py  dataset.py  main.py  segmentation_module.py
src/data/: __init__.py  dataset.py  dm.py
tests/: test_classifiacation_metric.py  test_confusion_matrix.py  test_confusion_matrix_advanced.py  test_confusion_matrix_numpy.py  test_datamodule.py  test_dataset.py  test_dataset_numpy.py  test_generate_circles.py  test_generate_data.py  test_generate_disks.py  test_model.py  test_segmentation_model.py  test_train.py  test_training.py  test_vit.py  unet.yml
tests/datasets/: test_generate_circles.py
(+17 files in other folders)
