[project]
name = "deep circle count"
version = "0.0.1"
authors = []
description = "Count circle with neural nets."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.black]
line-length = 88
