[project]
name = "Segment largest disks"
version = "0.0.1"
authors = []
description = "Train a segmentation model to segment only lthe argest disks on an image."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.black]
line-length = 88
